src/objects/Steps__c/fields/FA_Findings__c.field-meta.xml
<CustomField>
    <fullName>FA_Findings__c</fullName>
    <label>FA Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>