src/objects/Steps__c/fields/FA_FV__c.field-meta.xml
<CustomField>
    <fullName>FA_FV__c</fullName>
    <label>FA / FV</label>
    <referenceTo>FA_FV_Analysis__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>