src/objects/Steps__c/fields/FA_Steps_Description_FA_Steps__c.field-meta.xml
<CustomField>
    <fullName>FA_Steps_Description_FA_Steps__c</fullName>
    <inlineHelpText>Please enter information about what you did during this step. Can be used for future processes and may become part of the FAR.</inlineHelpText>
    <label>FA Steps / Description (FA Steps)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>