src/objects/Steps__c/fields/FAFVStatus__c.field-meta.xml
<CustomField>
    <fullName>FAFVStatus__c</fullName>
    <description>Referenced to FA_FV_Status__c</description>
    <formula>TEXT(FA_FV__r.FA_FV_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAFVStatus</label>
    <type>Text</type>
</CustomField>